# unbounded-ordered-tree

./: .gitconfig  .gitignore  LICENSE  README.md  TODO  compile.sh
aux/: Makefile.am  configure.ac  main.cpp
src/unbounded_ordered/: unbounded_ordered_tree.hpp
src/unbounded_ordered/node/: unbounded_ordered_node.hpp  unbounded_ordered_node_ctor_dtor_getter_setter.tpp  unbounded_ordered_node_decl.hpp  unbounded_ordered_node_print.tpp  unbounded_ordered_node_properties.tpp
src/unbounded_ordered/node/algorithm/: unbounded_ordered_node_lca.tpp
src/unbounded_ordered/node/apply/: unbounded_ordered_node_apply_cumulative.tpp  unbounded_ordered_node_apply_morphism.tpp
src/unbounded_ordered/node/consistency/: unbounded_ordered_node_consistency.tpp
src/unbounded_ordered/node/subtree/: unbounded_ordered_node_subtree_copy.tpp  unbounded_ordered_node_subtree_delete.tpp  unbounded_ordered_node_subtree_detach.tpp  unbounded_ordered_node_subtree_equal.tpp  unbounded_ordered_node_subtree_insert.tpp
src/unbounded_ordered/node/traversal/: unbounded_ordered_node_traversal_dfs_postorder.tpp  unbounded_ordered_node_traversal_dfs_preorder.tpp  unbounded_ordered_node_traversal_leaf.tpp  unbounded_ordered_node_traversal_xml.tpp
src/unbounded_ordered/tree/: unbounded_ordered_tree.tpp  unbounded_ordered_tree_decl.hpp  unbounded_ordered_tree_ranged_iterator.tpp
src/unbounded_ordered/tree/iterator/: bidirectional_iterator_t.tpp  forward_iterator_t.tpp  free_iterator_t.tpp  iterator_t.tpp
src/unbounded_ordered/tree/ranged_loop/: unbounded_ordered_tree_ranged_loop_bfs.tpp  unbounded_ordered_tree_ranged_loop_decl.hpp  (+1 more)
tst/: Makefile.am  unit-tests.cpp
tst/node/: node_apply_test.cpp  node_consistency_test.cpp  node_lca_test.cpp  node_properties_test.cpp  node_subtree_copy_test.cpp  node_subtree_delete_test.cpp  node_subtree_equal_test.cpp  node_subtree_insert_test.cpp  node_traversal_test.cpp
tst/tree/: tree_change_data_test.cpp  tree_ctor_dtor_test.cpp  tree_iterator_cast_test.cpp  tree_ranged_loop_test.cpp  tree_subtree_copy_test.cpp  tree_subtree_detach_test.cpp  tree_subtree_insert_test.cpp  tree_traversal_test.cpp
(+30 files in other folders)
